--- a/urna/index.html
+++ b/urna/index.html
@@ -72,6 +72,7 @@
         </div>
     </div>
 
+    <!-- importante ser puxado primeiro -->
     <script src="etapas.js"></script>
     <script src="script.js"></script>
 </body>
